# Weave_Protocol

./: .gitignore  CONTRIBUTING.md  DOCKER.md  PLANNING.md  README.md  SECURITY.md  docker-compose.yml  github-setup.md  package-lock.json  revenue-treasury-guide.md  social-media-post.md
.github/: dependabot.yml
adapter-antigravity/: README.md  SKILL.md  package-lock.json  package.json
adapter-claudecode/: README.md  SKILL.md  package-lock.json  package.json
adapter-msaf/: README.md  SKILL.md  package-lock.json  package.json
adversary/: README.md  SKILL.md  package-lock.json  package.json  tsconfig.json
agentsecbench/: .gitignore  METHODOLOGY.md  README.md  SKILL.md  package.json  tsconfig.json
api/: Dockerfile  README.md  SKILL.md  package-lock.json  package.json
browser/: README.md  SKILL.md  package-lock.json  package.json
browser-extension/: README.md  manifest.json  package.json
cli/: README.md  SKILL.md  package-lock.json  package.json
docs/: q3-2026.html
domere/: README.md  SKILL.md  package-lock.json  package.json
full/: README.md  index.d.ts  index.js  package-lock.json  package.json
hord/: README.md  SKILL.md  package-lock.json  package.json
hundredmen/: README.md  SKILL.md  package-lock.json  package.json
inspector/: README.md  SKILL.md  package-lock.json  package.json
langchain/: README.md  SKILL.md  callback.ts  index.ts  package-lock.json  package.json  scanner.ts  secure-retriever.ts  tsconfig.json
llamaindex-py/: README.md  pyproject.toml
llamaindex-py/src/weave_protocol_llamaindex/: __init__.py  callback.py  scanner.py  secure_retriever.py  secure_tool.py  types.py
llamaindex-py/tests/: test_security.py
mund/: .npmignore  README.md  SKILL.md  package-lock.json  package.json  server.json
mund-mcp/: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PLANNING.md  README.md  SECURITY.md  docker-compose.yml  package.json
tollere/: README.md  SKILL.md  package.json  (+2 more)
(+264 files in other folders)
